--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC     = gcc
 CFLAGS = -Wall -O2 `pkg-config --cflags gtk+-2.0`
 LIBS   = `pkg-config --libs gtk+-2.0`
-OBJS = util.o dialogs.o bbbm.o image.o options.o main.o
+OBJS = util.o options.o image.o dialogs.o bbbm.o main.o
 BINDIR = /usr/local/bin
 
 bbbm: $(OBJS)
