Refactored the options to support a dynamic number of commands

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = bbbm
 bbbm_SOURCES = bbbm.c bbbm.h \
 		dialogs.c dialogs.h \
+		command.c command.h \
 		command_item.c command_item.h \
 		image.c image.h \
 		options.c options.h \
